# unflaton

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml
src/: flat.rs  main.rs
