[package]
name = "unflaton"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
clap = { version = "4", features = ["derive"] }
wild = "2"
colored = "2"
log = "0.4"
pretty_env_logger = "0.4"
